Fix wrong "main" file in package.json; bump version to 0.1.1

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "regexp-capture-interpolation",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Interpolate a regular expression match into a replacement string",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "tape test/**/*.js"
   },
